@@ -11,3 +11,4 @@
 - added sounds for when damaged
 - added sounds for when in "walk" & "stand" states
 - added galloping sounds while riding
+- mobs:lasso can be used to pick up tamed horses
